@@ -212,6 +212,7 @@ int   save_prefs(buffer *b, const char *name);
 int   load_prefs(buffer *b, const char *name);
 int   load_syntax_by_name(buffer *b, const char *name);
 int   load_auto_prefs(buffer *b, const char *name);
+char *virtual_extension(buffer * const b);
 int   save_auto_prefs(buffer *b, const char *name);
 int   pop_prefs(buffer *b);
 int   push_prefs(buffer *b);
@@ -244,6 +245,7 @@ int  find(buffer *b, const char *pattern, const bool skip_first);
 int  replace(buffer *b, int n, const char *string);
 int  find_regexp(buffer *b, const char *regex, const bool skip_first);
 int  replace_regexp(buffer *b, const char *string);
+char *nth_regex_substring( const line_desc *ld, int i);
 
 /* signals.c */
 void stop_ne(void);
